syntax = "proto2";
option java_package = "org.splicemachine.capstone";
option java_outer_classname = "GetRegionServerLSNProtos";
option java_generic_services = true;
option java_generate_equals_and_hash = true;
option optimize_for = SPEED;


message GetRegionServerLSNRequest {
}

message GetRegionServerLSNReponse {
  message Result {
    optional uint64 lsn = 1;
    optional string regionName = 2;
  }
  repeated Result result = 1;
}

service GetRegionServerLSNService {
  rpc getRegionServerLSN(GetRegionServerLSNRequest)
    returns (GetRegionServerLSNReponse);
}

/* A sample for nested Reponse
 * message SearchResponse {
 * message Result {
 *   required string url = 1;
 *   optional string title = 2;
 *   repeated string snippets = 3;
 * }
 * repeated Result result = 1;
 *}
 */
